[gd_scene load_steps=7 format=2]

[ext_resource path="res://RestImportPanel.gd" type="Script" id=1]
[ext_resource path="res://textures/full_button_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://textures/connected.png" type="Texture" id=3]
[ext_resource path="res://textures/teddy-bear.png" type="Texture" id=4]
[ext_resource path="res://connectors/RESTRequest.tscn" type="PackedScene" id=5]
[ext_resource path="res://LoginDialog.tscn" type="PackedScene" id=6]

[node name="RestImportPanel" type="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 281.0
margin_top = 19.0
margin_right = -17.0
margin_bottom = -13.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="tagEdit" type="LineEdit" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 251.0
margin_top = 61.0
margin_right = -14.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "custom_fonts" ]

[node name="Label" type="Label" parent="tagEdit" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -65.0
margin_top = 5.0
margin_right = -9.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Tag"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="sortCombo" type="OptionButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 63.0
margin_right = 182.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Default"
flat = false
align = 0
items = [ "Default", null, false, 0, null, "Rank", null, false, 1, null, "Name", null, false, 2, null, "Author", null, false, -1, null ]
selected = 0
_sections_unfolded = [ "custom_fonts" ]

[node name="searchBtn" type="Button" parent="." index="2"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -157.0
margin_top = 12.0
margin_right = -13.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Search"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="resultGrid" type="Tree" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 115.0
margin_right = -15.0
margin_bottom = -15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 2
allow_reselect = false
allow_rmb_select = true
hide_folding = true
hide_root = true
drop_mode_flags = 0
select_mode = 1

[node name="qualityCombo" type="OptionButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 391.0
margin_top = 13.0
margin_right = 450.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "1"
flat = false
align = 0
items = [ "1", null, false, 1, null, "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null, "5", null, false, 5, null ]
selected = 0
_sections_unfolded = [ "custom_fonts" ]

[node name="Label" type="Label" parent="qualityCombo" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -119.0
margin_top = 3.0
margin_right = -6.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Quality"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="only_new_btn" type="Button" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 12.0
margin_right = 198.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Completed"
flat = false
align = 1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="login_btn" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 23.0
margin_top = 12.0
margin_right = 202.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Connect"
icon = ExtResource( 3 )
flat = false
align = 1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="fam_friendly_btn" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 217.0
margin_top = 12.0
margin_right = 261.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = false
align = 1

[node name="RESTRequest" parent="." index="8" instance=ExtResource( 5 )]

[node name="LoginDialog" parent="." index="9" instance=ExtResource( 6 )]

visible = false

[connection signal="pressed" from="searchBtn" to="." method="_on_searchBtn_pressed"]

[connection signal="item_edited" from="resultGrid" to="." method="_on_resultGrid_item_edited"]

[connection signal="pressed" from="login_btn" to="." method="_on_login_btn_pressed"]

[connection signal="search_completed" from="RESTRequest" to="." method="_on_search_completed"]


